<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragments.RegisterFragment"
    android:background="@color/purple_500"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_12sdp"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                >

                <LinearLayout
                    android:id="@+id/LlTtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:padding="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    >

                    <TextView
                        android:id="@+id/LblRegistro"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/new_user_title"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_4sdp"
                        />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TxtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/register_name"
                    app:endIconMode="clear_text"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ETxtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textCapCharacters|textCapSentences|textCapWords"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="clear_text"
                    android:hint="@string/register_email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ETxtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="password_toggle"
                    android:hint="@string/register_password"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ETxtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TxtPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="password_toggle"
                    android:hint="@string/register_password_confirm"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ETxtPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="horizontal"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TxtLatitud"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:hint="@string/register_lat"
                        android:enabled="false"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ETxtLatitud"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TxtLongitud"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:hint="@string/register_long"
                        android:enabled="false"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ETxtLongitud"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnCapturarCoordenadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="@string/seleccionar_ubicacion"
                    android:layout_marginTop="@dimen/_12sdp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/new_register"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>